# pycobello

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pycobello/: __init__.py  errors.py  log.py  preview.py  scaffold.py
src/pycobello/api/: __init__.py  app.py
src/pycobello/cli/: __init__.py  _build.py  _check.py  _deploy.py  _init.py  _new.py  _preview.py
src/pycobello/config/: __init__.py  load.py  models.py
src/pycobello/content/: __init__.py  discovery.py  frontmatter.py  markdown.py  model.py
src/pycobello/deploy/: __init__.py  github_pages.py
src/pycobello/diagnostics/: __init__.py  checks.py  frontmatter.py  links.py  slugs.py
src/pycobello/plugins/: __init__.py  hooks.py  manager.py
src/pycobello/render/: __init__.py  context.py  jinja.py  routing.py
tests/: __init__.py  conftest.py  test_build.py  test_config.py  test_frontmatter.py  test_plugins.py  test_routing.py
